<resources>
    <string name="app_name">CodeWars</string>
    <string name="search_username_hint">Enter username</string>
    <string name="search">Search</string>
    <string name="search_screen_empty_text">Your search history will appear here…\nStart by searching for a user.</string>
    <string name="error_user_not_found">User not found, please try another search!</string>
    <string name="formatted_rank">Rank: %1$d</string>
    <string name="formatted_leader_board_position">Leaderboard position: %1$d</string>
    <string name="formatted_best_language">Best Language: %1$s (%2$d)</string>
    <string name="error_generic_message">Something went wrong, please try again.</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date">Date</string>
    <string name="sort_by_leaderboard_score">Leaderboard Pos</string>
    <string name="sort_by_rank">Rank</string>
    <string name="menu_text_completed_challenges">Completed</string>
    <string name="menu_text_authored_challenges">Authored</string>
    <string name="retry">Retry</string>
    <string name="authored_challenges_empty_text">This user hasn\'t authored any challenges yet.</string>
    <string name="error_fetching_authored_challenges">Sorry, cannot fetch authored challenges now</string>
</resources>
