<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_item_sort_by_date"
                android:title="@string/sort_by_date"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/menu_item_sort_by_rank"
                android:title="@string/sort_by_rank"
                app:showAsAction="collapseActionView" />
            <item
                android:id="@+id/menu_item_sort_by_leaderboard_score"
                android:title="@string/sort_by_leaderboard_score"
                app:showAsAction="collapseActionView" />
        </menu>
    </item>
</menu>